--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "axios": "^1.7.4",
     "docxtemplater": "^3.49.2",
     "file-saver": "^2.0.5",
     "formidable": "^3.5.1",
