--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 GOOGLE_CLIENT_ID="141210979717-ecall414a0ohld0d7fpqbo0tdqmrf0oq.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="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"
-NEXTAUTH_URL=https://srb-pearl.vercel.app/
+NEXTAUTH_URL=https://ocs-gray.vercel.app/
 MONGODB_URI='mongodb+srv://riki:riki123@cluster0.n7eadqj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
 NEXTAUTH_SECRET=your_riki1285_secret_here
 EMAIL_USER=tickettest050588@gmail.com
