--- a/.env
+++ b/.env
@@ -1,7 +1,11 @@
 GOOGLE_CLIENT_ID="141210979717-ecall414a0ohld0d7fpqbo0tdqmrf0oq.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="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"
-NEXTAUTH_URL=https://ocs-gray.vercel.app/
+NEXTAUTH_URL=https://new-project-production.up.railway.app/
 MONGODB_URI='mongodb+srv://riki:riki123@cluster0.n7eadqj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
 NEXTAUTH_SECRET=your_riki1285_secret_here
 EMAIL_USER=tickettest050588@gmail.com
 EMAIL_PASS=bezm uwrs qzgc mmpj
+CLOUDINARY_CLOUD_NAME=dyvoh3jwt
+CLOUDINARY_API_KEY=892941196127833
+CLOUDINARY_API_SECRET=ri8XAxruq7IL3V0T59cBnttvY1E
+
