--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "node server.js",
     "lint": "next lint"
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
     "axios": "^1.7.4",
+    "b2": "^0.1.11",
+    "backblaze-b2": "^1.7.0",
+    "busboy": "^1.6.0",
+    "cloudinary": "^2.4.0",
     "docxtemplater": "^3.49.2",
+    "express": "^4.19.2",
     "file-saver": "^2.0.5",
     "formidable": "^3.5.1",
     "google-auth-library": "^9.13.0",
@@ -20,12 +25,16 @@
     "mongoose": "^8.5.2",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
+    "next-cloudinary": "^6.10.0",
     "nodemailer": "^6.9.14",
     "pizzip": "^3.1.7",
     "react": "^18",
     "react-csv": "^2.2.2",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "eslint": "^8",
