--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "backblaze-b2": "^1.7.0",
     "busboy": "^1.6.0",
     "cloudinary": "^2.4.0",
+    "cors": "^2.8.5",
     "docxtemplater": "^3.49.2",
     "express": "^4.19.2",
     "file-saver": "^2.0.5",
